--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     
-    <h1>SPORTS PLAYER REGISTRATION</h1>
+    <h1>FIFA PLAYER REGISTRATION</h1>
     <h2>PLAYER FORM</h2>
    <div class="main-container">
     <div class="section">
